<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mainbg"
    tools:context=".Fragments.ApproachFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:alpha="0.5"
            android:background="@drawable/borders"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Headings"
                android:text="@string/style_title"
               />

            <TextView
                android:id="@+id/txtApproach"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:text="@string/style_desc"
                android:textColor="@color/content_" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/how_long_title"
                style="@style/Headings" />

            <TextView
                android:id="@+id/txtAboutLove"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:text="@string/how_long_desc"
                android:textColor="@color/content_" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/time_title"
                style="@style/Headings"
                 />

            <TextView
                android:id="@+id/txtTrust"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:text="@string/time_desc"
                android:textColor="@color/content_" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Headings"
                android:text="@string/shot_list_title"
                 />

            <TextView
                android:id="@+id/txtBooking"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:text="@string/shot_list_desc"
                android:textColor="@color/content_" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/how_many_title"
                style="@style/Headings" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:text="@string/how_many_desc"
                android:textColor="@color/content_" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Headings"
                android:text="@string/camera_title"
               />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:text="@string/camera_desc"
                android:textColor="@color/content_" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Headings"
                android:text="@string/see_title"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:text="@string/see_desc"
                android:textColor="@color/content_" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Headings"
                android:text="@string/photographers_title"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:text="@string/photographers_desc"
                android:textColor="@color/content_" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Headings"
                android:text="@string/publish_title"
               />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:text="@string/publish_desc"
                android:textColor="@color/content_" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Headings"
                android:text="@string/rains_title"
                 />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:text="@string/rains_desc"
                android:textColor="@color/content_" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Headings"
                android:text="@string/editing_title"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:text="@string/editing_desc"
                android:textColor="@color/content_" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rights_title"
                style="@style/Headings" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:text="@string/rights_desc"
                android:textColor="@color/content_" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/travel_title"
                style="@style/Headings" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:text="@string/travel_desc"
                android:textColor="@color/content_" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/meal_title"
                style="@style/Headings"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:text="@string/meal_desc"
                android:textColor="@color/content_" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pencil_bookings_title"
                style="@style/Headings" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:text="@string/pencil_bookings_desc"
                android:textColor="@color/content_" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/how_book_title"
                style="@style/Headings"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:text="@string/how_book_desc"
                android:textColor="@color/content_" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cancelled_title"
                style="@style/Headings" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:text="@string/cancelled_desc"
                android:textColor="@color/content_" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/raw_files_title"
                style="@style/Headings" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:text="@string/raw_files_desc"
                android:textColor="@color/content_" />

        </LinearLayout>


    </ScrollView>

</RelativeLayout>